# NexusX

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025112904__generate_user_entity.py
cli/: __init__.py  main.py
docs/: architecture.md  configuration.md  getting-started.md
locales/ar/LC_MESSAGES/: messages.po
locales/de/LC_MESSAGES/: messages.po
locales/en/LC_MESSAGES/: messages.po
locales/es/LC_MESSAGES/: messages.po
locales/fr/LC_MESSAGES/: messages.po
locales/it/LC_MESSAGES/: messages.po
locales/ru/LC_MESSAGES/: messages.po
src/: __init__.py  main.py
src/abstract/: __init__.py  entity.py  repository.py  service.py
src/core/: __init__.py  config.py  database.py  events.py  i18n.py  jwt.py  middleware.py  security.py
src/domains/auth/: entities.py  services.py
src/routers/: auth.py
src/security/: __init__.py  dependencies.py  jwt.py
src/utilities/: enums.py
tests/: conftest.py
tests/api/: __init__.py
workers/: main.py
